--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -30,5 +30,19 @@
    <filter-name>encodingFilter</filter-name >
    <url-pattern>/*</url-pattern>
  </filter-mapping>
+ 
+   <!-- 出错页面定义   -->
+	<!-- <error-page>  
+	    <exception-type>java.lang.Throwable</exception-type>  
+	    <location>/WEB-INF/jsp/error/error.jsp</location>  
+	</error-page>   -->
+	<!-- <error-page>  
+	    <error-code>500</error-code>  
+	    <location>/error/error.jsp</location>  
+	</error-page>   -->
+	<error-page>  
+	    <error-code>404</error-code>  
+	    <location>/WEB-INF/jsp/error/error.jsp</location>  
+	</error-page>  
 </web-app>
 
