--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,20 @@
         <version>1.1.0.Final</version>  
     </dependency> 
     
+      
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-databind</artifactId>
+	    <version>2.9.1</version>
+	</dependency>
+	
+	<!-- <dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-core</artifactId>
+	    <version>2.9.2</version>
+	</dependency> -->
+    
     <dependency>  
         <groupId>org.hibernate</groupId>  
         <artifactId>hibernate-validator</artifactId>  
