--- a/pom.xml
+++ b/pom.xml
@@ -21,13 +21,25 @@
       <scope>test</scope>
     </dependency>
     
+    <dependency>
+			<groupId>org.apache.zookeeper</groupId>
+			<artifactId>zookeeper</artifactId>
+			<version>3.4.6</version>
+			
+	</dependency>
+    
+   <dependency>
+	  <groupId>org.mybatis</groupId>
+	  <artifactId>mybatis</artifactId>
+	  <version>3.2.7</version>
+	</dependency>
+    
     <dependency>  
         <groupId>javax.validation</groupId>  
         <artifactId>validation-api</artifactId>  
         <version>1.1.0.Final</version>  
     </dependency> 
     
-      
     <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 	<dependency>
 	    <groupId>com.fasterxml.jackson.core</groupId>
