--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,2 +1,9 @@
 
 ################################ \u6570\u636e\u5e93\u914d\u7f6e ##############################
+driverClassName=com.mysql.jdbc.Driver
+#\u6570\u636e\u5e93\u5730\u5740        
+jdbc_url=jdbc:mysql://localhost:3306/hotel?useSSL=false
+#\u6570\u636e\u5e93\u7528\u6237\u540d
+jdbc_username=root
+#\u6570\u636e\u5e93\u5bc6\u7801
+jdbc_password=a1234567
